# astra-creator

./: .gitignore  Cargo.toml  Makefile  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: docker.rs  generate.rs  main.rs  model.rs  ui.rs
