[package]
name = "astra-creator"
version = "0.0.11"
edition = "2021"
rust-version = "1.75"
description = "TUI para crear y administrar salas de chat Astra sobre Docker"
license = "AGPL-3.0-or-later"

[[bin]]
name = "astra-creator"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
